Implement add, remove and toggle functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
   </div>
 
-  <dialog>
+  <dialog closedby="any">
     <h3>Add a new book</h3>
     <form method="dialog">
       <div class="fields">
@@ -31,7 +31,7 @@
       <label for="read">Already read?</label>
 
       <div class="buttons">
-        <button type="submit">Add Book</button>
+        <button id="add" type="submit">Add Book</button>
         <button id="cancel">Cancel</button>
       </div>
     </form>
